# vw-cli

./: .dir-locals.el  LICENSE  old-emacs-lisp-eshell-cli.el  stack.yaml  vw-cli.cabal
app/: Main.hs
src/: Commands.hs  Model.hs  Table.hs
