name:                vw-cli
version:             1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/vw-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Model
                     , Commands
                     , Table
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , time
                     , Cabal
                     , process
                     , extra
                     , text
  default-language:    Haskell2010

executable vw
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vw-cli
                     , docopt
                     , directory
                     , Plural
                     , extra
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/vw-cli
